--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: baRulho
 Type: Package
 Title: Quantifying sound degradation  
 Version: 1.0.0
-Date: 2019-10-16
+Date: 2019-10-26
 Author: Marcelo Araya-Salas [aut, cre]
 Maintainer: Marcelo Araya-Salas <marceloa27@gmail.com>
 Description: Quantification of degradation of (animal) sounds.
@@ -16,4 +16,5 @@ NeedsCompilation: no
 Suggests: 
 RoxygenNote: 6.1.1
 Repository: CRAN
+Language: en-US
 Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marceloa27@gmail.com")
