--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(blur_ratio)
 export(envelope_correlation)
 export(excess_attenuation)
 export(snr_attenuation)
+export(spectrum_correlation)
 export(xcorr_distortion)
 exportClasses(extended_selection_table)
 exportClasses(selection_table)
