--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(atmospheric_attenuation)
 export(blur_ratio)
+export(blur_ratio_spectrum)
 export(envelope_correlation)
 export(excess_attenuation)
 export(snr_attenuation)
