--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,13 @@
 
 export(atmospheric_attenuation)
 export(blur_ratio)
-export(blur_ratio_spectrum)
 export(envelope_correlation)
 export(excess_attenuation)
 export(snr_attenuation)
+export(spcc_align)
+export(spcc_distortion)
+export(spectral_blur_ratio)
 export(spectrum_correlation)
-export(xcorr_distortion)
 exportClasses(extended_selection_table)
 exportClasses(selection_table)
 import(grDevices)
