--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ export(atmospheric_attenuation)
 export(blur_ratio)
 export(envelope_correlation)
 export(excess_attenuation)
+export(master_sound_file)
 export(snr_attenuation)
 export(spcc_align)
 export(spcc_distortion)
 export(spectral_blur_ratio)
-export(spectrum_correlation)
+export(spectral_correlation)
 exportClasses(extended_selection_table)
 exportClasses(selection_table)
 import(grDevices)
@@ -18,4 +19,5 @@ import(pbapply)
 import(seewave)
 import(tuneR)
 import(utils)
+import(warbleR)
 importFrom(stats,cor)
