--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,12 @@ export(blur_ratio)
 export(envelope_correlation)
 export(excess_attenuation)
 export(master_sound_file)
-export(snr_attenuation)
+export(snr)
+export(spcc)
 export(spcc_align)
-export(spcc_distortion)
 export(spectral_blur_ratio)
 export(spectral_correlation)
+export(spectrum_correlation)
 exportClasses(extended_selection_table)
 exportClasses(selection_table)
 import(grDevices)
