added vignette editions 6

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: baRulho
 Type: Package
-Title: Quantifying habitat-induced acoustic signal degradation  
+Title: Quantifying Habitat-Induced Acoustic Signal Degradation  
 Version: 1.0.0
 Date: 2020-01-10
 Author: Marcelo Araya-Salas [aut, cre]
