--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: baRulho
 Type: Package
 Title: Quantifying Habitat-Induced Acoustic Signal Degradation  
 Version: 1.0.0
-Date: 2020-01-10
+Date: 2020-01-17
 Author: Marcelo Araya-Salas [aut, cre]
 Maintainer: Marcelo Araya-Salas <marceloa27@gmail.com>
-Description: Quantifying habitat-induced degradation of (animal) acoustic signals.
+Description: Intended to facilitate acoustic analysis of (animal) sound transmission experiments, which typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics, including blur ratio, signal-to-noise ratio, excess attenuation and envelope correlation among others (Dabelsteen et al 1993 <doi:10.1121/1.406682>).
 License: GPL (>= 2)
 Imports: pbapply, utils, stats, seewave, tuneR
 Depends: R (>= 3.2.1), warbleR (>= 1.1.20)
