--- a/baRulho.Rcheck/baRulho/DESCRIPTION
+++ b/baRulho.Rcheck/baRulho/DESCRIPTION
@@ -1,21 +1,22 @@
 Package: baRulho
 Type: Package
-Title: Quantifying sound degradation
+Title: Quantifying Habitat-Induced Acoustic Signal Degradation
 Version: 1.0.0
-Date: 2019-10-26
+Date: 2020-01-17
 Author: Marcelo Araya-Salas [aut, cre]
 Maintainer: Marcelo Araya-Salas <marceloa27@gmail.com>
-Description: Quantification of degradation of (animal) sounds.
+Description: Intended to facilitate acoustic analysis of (animal) sound transmission experiments, which typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics, including blur ratio, signal-to-noise ratio, excess attenuation and envelope correlation among others (Dabelsteen et al 1993 <doi:10.1121/1.406682>).
 License: GPL (>= 2)
-Imports: pbapply, warbleR, utils, stats, seewave, tuneR
-Depends: R (>= 3.2.1)
+Imports: pbapply, utils, stats, seewave, tuneR
+Depends: R (>= 3.2.1), warbleR (>= 1.1.20)
 LazyData: TRUE
 URL: https://github.com/maRce10/baRulho
 BugReports: https://github.com/maRce10/baRulho/issues
 NeedsCompilation: no
-Suggests:
-RoxygenNote: 6.1.1
+Suggests: ggplot2, knitr, kableExtra, viridis, png
+VignetteBuilder: knitr
+RoxygenNote: 7.0.2
 Repository: CRAN
 Language: en-US
 Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marceloa27@gmail.com")
-Built: R 3.6.1; ; 2019-10-27 14:23:54 UTC; unix
+Built: R 3.6.1; ; 2020-01-17 23:34:33 UTC; unix
