--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(blur_ratio)
 export(envelope_correlation)
 export(excess_attenuation)
 export(master_sound_file)
+export(search_templates)
 export(snr)
 export(spcc)
 export(spcc_align)
