--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,13 @@ export(envelope_correlation)
 export(excess_attenuation)
 export(master_sound_file)
 export(search_templates)
+export(signal_to_noise_ratio)
 export(snr)
 export(spcc)
 export(spcc_align)
 export(spectral_blur_ratio)
 export(spectral_correlation)
+export(tail_to_signal_ratio)
 exportClasses(extended_selection_table)
 exportClasses(selection_table)
 import(grDevices)
