noise_profile() added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(blur_ratio)
 export(envelope_correlation)
 export(excess_attenuation)
 export(master_sound_file)
+export(noise_profile)
 export(search_templates)
 export(signal_to_noise_ratio)
 export(snr)
@@ -24,4 +25,6 @@ import(seewave)
 import(tuneR)
 import(utils)
 import(warbleR)
+importFrom(stats,aggregate)
+importFrom(stats,approx)
 importFrom(stats,cor)
