--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ import(utils)
 import(warbleR)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
+importFrom(stats,ave)
 importFrom(stats,cor)
