internal warbler function copied

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(spcc_align)
 export(spectral_blur_ratio)
 export(spectral_correlation)
 export(tail_to_signal_ratio)
+import(fftw)
 import(grDevices)
 import(graphics)
 import(parallel)
