--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: baRulho
 Type: Package
 Title: Quantifying Habitat-Induced Acoustic Signal Degradation  
-Version: 1.0.4
-Date: 2021-03-09
+Version: 1.0.5
+Date: 2021-04-20
 Author: Marcelo Araya-Salas [aut, cre]
 Maintainer: Marcelo Araya-Salas <marcelo.araya@ucr.ac.cr>
 Description: Intended to facilitate acoustic analysis of (animal) sound transmission experiments, which typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics, including blur ratio, signal-to-noise ratio, excess attenuation and envelope correlation among others (Dabelsteen et al 1993 <doi:10.1121/1.406682>).
@@ -13,7 +13,8 @@ LazyData: TRUE
 URL: https://github.com/maRce10/baRulho
 BugReports: https://github.com/maRce10/baRulho/issues
 NeedsCompilation: no
-Suggests: 
+Suggests:
+    rmarkdown,
     ggplot2,
     knitr,
     kableExtra,
