fix conflicts with warbleR updates and bugs in SNR and EA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ import(seewave)
 import(tuneR)
 import(utils)
 import(warbleR)
+importFrom(methods,is)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,ave)
