--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -1,11 +1,3 @@
-pandoc: 1.19.2.1
-pkgdown: 1.4.1
-pkgdown_sha: ~
-articles: 
-- title: vignettes
-  navbar: vignettes
-  contents:
-  - starts_with("baRulho")
+url: ~
 template:
-  params:
-    bootswatch: spacelab
+  bootstrap: 5
