--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: baRulho
 Type: Package
 Title: Quantifying Habitat-Induced Acoustic Signal Degradation  
-Version: 1.0.6
-Date: 2022-02-24
+Version: 1.0.7
+Date: 2022-07-08
 Author: Marcelo Araya-Salas [aut, cre]
 Maintainer: Marcelo Araya-Salas <marcelo.araya@ucr.ac.cr>
 Description: Intended to facilitate acoustic analysis of (animal) sound transmission experiments, which typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics, including blur ratio, signal-to-noise ratio, excess attenuation and envelope correlation among others (Dabelsteen et al 1993 <doi:10.1121/1.406682>).
 License: GPL (>= 2)
-Imports: pbapply, utils, stats, seewave, tuneR, fftw, methods
+Imports: pbapply, utils, stats, seewave, tuneR, fftw, methods, viridis
 Depends: R (>= 3.2.1), warbleR (>= 1.1.27)
 LazyData: TRUE
 URL: https://github.com/maRce10/baRulho
@@ -18,7 +18,6 @@ Suggests:
     ggplot2,
     knitr,
     kableExtra,
-    viridis,
     png,
     testthat
 VignetteBuilder: knitr
