--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,10 @@ export(master_sound_file)
 export(noise_profile)
 export(search_templates)
 export(signal_to_noise_ratio)
-export(spcc)
 export(spcc_align)
-export(spectral_blur_ratio)
-export(spectral_correlation)
+export(spcc_distortion)
+export(spectrum_blur_ratio)
+export(spectrum_correlation)
 export(tail_to_signal_ratio)
 import(fftw)
 import(grDevices)
@@ -22,6 +22,7 @@ import(pbapply)
 import(seewave)
 import(tuneR)
 import(utils)
+import(viridis)
 import(warbleR)
 importFrom(methods,is)
 importFrom(stats,aggregate)
