--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: 2.17.1.1
-pkgdown: 2.0.5
+pandoc: '2.18'
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  baRulho_quantifying_sound_degradation: baRulho_quantifying_sound_degradation.html
-last_built: 2022-07-09T01:58Z
+  baRulho: baRulho.html
+last_built: 2022-07-20T01:27Z
 urls:
   reference: https://marce10.github.io/baRulho/reference
   article: https://marce10.github.io/baRulho/articles
