--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(master_sound_file)
 export(noise_profile)
 export(search_templates)
 export(signal_to_noise_ratio)
+export(spcc)
 export(spcc_align)
 export(spcc_distortion)
 export(spectrum_blur_ratio)
