--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(align_test_files)
 export(atmospheric_attenuation)
+export(attenuation)
 export(blur_ratio)
 export(envelope_correlation)
 export(excess_attenuation)
@@ -14,6 +15,7 @@ export(spcc_align)
 export(spcc_distortion)
 export(spectrum_blur_ratio)
 export(spectrum_correlation)
+export(synth_sounds)
 export(tail_to_signal_ratio)
 import(fftw)
 import(grDevices)
