fix call attribute in output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(spectrum_blur_ratio)
 export(spectrum_correlation)
 export(synth_sounds)
 export(tail_to_signal_ratio)
+import(Sim.DiffProc)
 import(fftw)
 import(grDevices)
 import(graphics)
