added detection_distance and habitat_attenuation_coefficient

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(align_test_files)
 export(atmospheric_attenuation)
 export(attenuation)
 export(blur_ratio)
+export(detection_distance)
 export(envelope_correlation)
 export(excess_attenuation)
 export(master_sound_file)
@@ -23,6 +24,7 @@ import(grDevices)
 import(graphics)
 import(parallel)
 import(pbapply)
+import(png)
 import(seewave)
 import(tuneR)
 import(utils)
