--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(blur_ratio)
 export(detection_distance)
 export(envelope_correlation)
 export(excess_attenuation)
+export(habitat_attenuation_coeff)
 export(master_sound_file)
 export(noise_profile)
 export(search_templates)
