--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: 2.19.2
-pkgdown: 2.0.6
+pandoc: '2.18'
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   baRulho: baRulho.html
-last_built: 2022-12-01T16:52Z
+last_built: 2022-12-18T22:03Z
 urls:
   reference: https://marce10.github.io/baRulho/reference
   article: https://marce10.github.io/baRulho/articles
