--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(excess_attenuation)
 export(find_markers)
 export(master_sound_file)
 export(noise_profile)
+export(plot_align_sounds)
 export(realign_test_sounds)
 export(search_templates)
 export(signal_to_noise_ratio)
@@ -31,6 +32,24 @@ import(tuneR)
 import(utils)
 import(viridis)
 import(warbleR)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_class)
+importFrom(checkmate,assert_data_frame)
+importFrom(checkmate,assert_directory)
+importFrom(checkmate,assert_function)
+importFrom(checkmate,assert_integerish)
+importFrom(checkmate,assert_list)
+importFrom(checkmate,assert_logical)
+importFrom(checkmate,assert_multi_class)
+importFrom(checkmate,assert_names)
+importFrom(checkmate,assert_numeric)
+importFrom(checkmate,makeAssertCollection)
+importFrom(checkmate,makeAssertionFunction)
+importFrom(checkmate,reportAssertions)
+importFrom(cli,make_ansi_style)
+importFrom(cli,num_ansi_colors)
+importFrom(cli,style_bold)
+importFrom(cli,style_italic)
 importFrom(methods,is)
 importFrom(ohun,template_correlator)
 importFrom(ohun,template_detector)
