new function plot_degradation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(find_markers)
 export(master_sound_file)
 export(noise_profile)
 export(plot_align_sounds)
+export(plot_degradation)
 export(realign_test_sounds)
 export(search_templates)
 export(signal_to_noise_ratio)
