created set_reference_sounds() and corresponding changes in other functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(find_markers)
 export(master_sound_file)
 export(noise_profile)
 export(plot_align_sounds)
+export(plot_blur_ratio)
 export(plot_degradation)
 export(realign_test_sounds)
 export(search_templates)
+export(set_reference_sounds)
 export(signal_to_noise_ratio)
 export(spcc)
 export(spcc_align)
@@ -26,7 +28,6 @@ import(fftw)
 import(grDevices)
 import(graphics)
 import(parallel)
-import(pbapply)
 import(png)
 import(seewave)
 import(tuneR)
@@ -57,4 +58,6 @@ importFrom(ohun,template_detector)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,ave)
+importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,na.omit)
