split example data and fix aligning vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(excess_attenuation)
 export(find_markers)
 export(master_sound_file)
 export(noise_profile)
-export(plot_align_sounds)
+export(plot_aligned_sounds)
 export(plot_blur_ratio)
 export(plot_degradation)
 export(realign_test_sounds)
