--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(detection_distance)
 export(envelope_correlation)
 export(excess_attenuation)
 export(find_markers)
+export(manual_realign)
 export(master_sound_file)
 export(noise_profile)
 export(plot_aligned_sounds)
