--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(align_test_files)
 export(attenuation)
+export(auto_realign)
 export(blur_ratio)
 export(detection_distance)
 export(envelope_correlation)
@@ -13,7 +14,6 @@ export(noise_profile)
 export(plot_aligned_sounds)
 export(plot_blur_ratio)
 export(plot_degradation)
-export(realign_test_sounds)
 export(search_templates)
 export(set_reference_sounds)
 export(signal_to_noise_ratio)
