--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,17 +1,20 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^docs$
-^pkgdown$
-^testing$
-^README\.Rmd$
-LICENSE.md
-^_pkgdown\.yml$
-^\.github$
+^.*\.pdf$
+testing
+docs
+tests
+pkgdown
+CITATION\.cff$
+README\.Rmd$
 ^codecov\.yml$
+^pkgcheck\.yaml$
+.github
 ^codemeta\.json$
+^appveyor\.yml$
 ^\.github$
 ^CONTRIBUTING\.md$
+^\.ccache$
 ^tic\.R$
-^.*\.pdf$
-^\.\.pdf$
 ^doc$
+^Meta$
