--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,9 @@ export(noise_profile)
 export(plot_aligned_sounds)
 export(plot_blur_ratio)
 export(plot_degradation)
-export(search_templates)
 export(set_reference_sounds)
 export(signal_to_noise_ratio)
 export(spcc)
-export(spcc_align)
-export(spcc_distortion)
 export(spectrum_blur_ratio)
 export(spectrum_correlation)
 export(synth_sounds)
@@ -57,6 +54,7 @@ importFrom(cli,style_italic)
 importFrom(methods,is)
 importFrom(ohun,template_correlator)
 importFrom(ohun,template_detector)
+importFrom(rlang,arg_match)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,ave)
