adding new warbleR progress message system

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,3 +65,6 @@ importFrom(stats,fft)
 importFrom(stats,na.omit)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(utils,browseURL)
+importFrom(utils,changedFiles)
+importFrom(utils,fileSnapshot)
