reduce package size for CRAN

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -19,3 +19,6 @@ README\.Rmd$
 ^doc$
 ^Meta$
 ^CITATION\.cff$
+^vignettes/plot_align_30m_closed\.jpeg$
+^vignettes/plot_align_10m_closed\.jpeg$
+^vignettes/plot_degradation_p1\.jpeg$
