added new function spot_ambient_noise()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(signal_to_noise_ratio)
 export(spcc)
 export(spectrum_blur_ratio)
 export(spectrum_correlation)
+export(spot_ambient_noise)
 export(synth_sounds)
 export(tail_to_signal_ratio)
 import(Sim.DiffProc)
