fix vignette issue in windows

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -22,3 +22,4 @@ README\.Rmd$
 ^vignettes/plot_align_30m_closed\.jpeg$
 ^vignettes/plot_align_10m_closed\.jpeg$
 ^vignettes/plot_degradation_p1\.jpeg$
+^vignettes/temp\.img\.jpeg$
