--- a/.github/workflows/tic.yml
+++ b/.github/workflows/tic.yml
@@ -74,8 +74,19 @@ jobs:
           key: ${{ runner.os }}-r-${{ matrix.config.r }}-${{steps.date.outputs.date}}
           restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-${{steps.date.outputs.date}}
 
-      - name: "[Stage] Install pak"
-        run: Rscript -e "install.packages('pak', repos = 'https://r-lib.github.io/p/pak/stable')"
+            # Clear corrupted packages before installation
+      - name: "[Cache] Clear corrupted packages"
+        run: rm -rf ${{ env.R_LIBS_USER }}
+
+      # Install core dependencies directly (avoids pak subprocess issues)
+      - name: "[Stage] Install dependencies"
+        run: |
+          Rscript -e "install.packages(c('remotes', 'R6'), repos = 'https://cloud.r-project.org')"
+          Rscript -e "remotes::install_github('ropensci/tic')"
+          Rscript -e "print(tic::dsl_load())"
+          Rscript -e "tic::prepare_all_stages()"
+          Rscript -e "tic::before_install()"
+          Rscript -e "tic::install()"
 
       - name: "[Stage] Install"
         run: Rscript -e "if (grepl('Ubuntu', Sys.info()[['version']]) && !grepl('Under development', R.version[['status']])) {options(repos = c(CRAN = sprintf('https://packagemanager.rstudio.com/all/__linux__/%s/latest', system('lsb_release -cs', intern = TRUE))))}else{options(repos = c(CRAN = 'cloud.r-project.org'))}; pak::pkg_install('ropensci/tic')" -e "print(tic::dsl_load())" -e "tic::prepare_all_stages()" -e "tic::before_install()" -e "tic::install()"
